# UberTools

./: Cargo.toml  MyCertificate.crt  MyKey.key  README.md  Rocket.toml
src/: main.rs
src/tools/: mod.rs  prelude.rs
src/tools/binary/: binary_conversion.rs  binary_to_string.rs  mod.rs
src/tools/hashing/: bcrypt.rs  md5.rs  mod.rs
src/tools/images/: resize.rs
src/tools/strings/: count.rs  mod.rs
static/css/: base.css  dark.css
static/js/: search.js
templates/: base.tera  index.tera  search_results.tera
templates/tools/binary/: binary_conversion.tera  binary_to_string.tera
templates/tools/hashing/: bcrypt_hash.tera  md5_hash.tera
templates/tools/images/: resize.tera
templates/tools/strings/: count.tera
