[package]
name = "ubertools"
version = "0.1.0"
authors = ["Bertus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0.112", features = ["derive"] }
lazy_static = "1.4.0"
md5 = "0.7.0"
bcrypt = "0.8.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "tera_templates", "serve"]
